--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,wordpress
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,wordpress
+# Created by https://www.toptal.com/developers/gitignore/api/wordpress,visualstudiocode,linux,macos,windows
+# Edit at https://www.toptal.com/developers/gitignore?templates=wordpress,visualstudiocode,linux,macos,windows
 
 ### Linux ###
 *~
@@ -16,6 +16,38 @@
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### VisualStudioCode ###
 .vscode/*
@@ -35,6 +67,32 @@
 # Ignore all local history of files
 .history
 .ionide
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
 
 ### WordPress ###
 # Core
@@ -82,7 +140,7 @@ wp-config.php
 #/wp-content/themes
 
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,wordpress
+# End of https://www.toptal.com/developers/gitignore/api/wordpress,visualstudiocode,linux,macos,windows
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
